Bug 1683612 - Don't use mobile display size where dom.meta-viewport.enable pref is false. r=botond

If the pref is false, we don't trigger auto-shrink machinery so that we
shouldn't use the display size to layout scrollbars.

Differential Revision: https://phabricator.services.mozilla.com/D100312